2004-04-25  John Finlay  <finlay@moeraki.com>

	* pygtk-pango-functions.xml Add.

	* pygtk-pangolanguage.xml Add pango functions to cover the real
	API pre-PyGTK 2.4.

	* pygtk-pango-functions.xml Remove extraneous sections.

	* pygtk-gdkscreen.xml ("size-changed") Add description.

2004-04-24  John Finlay  <finlay@moeraki.com>

	* pygtk-pangoattribute.xml Fix typo. Reorder attributes.

	* pygtk-pangoattrlist.xml (filter) Add decsription of this
	PyGTK 2.4 method.

	* pygtk-pangocontext.xml Fix link in Description.

	* pygtk-pangofontface.xml (list_sizes) Add desciption of this
	PyGTK 2,4 method.

	* pygtk-pangofontfamily.xml (is_monospace) Add description of this
	PyGTK 2.4 method.

	* pygtk-pangofontset.xml Fix typo in Description.
	(foreach) Add description of this PyGTK 2.4 method.

	* pygtk-pangofontsetsimple.xml Add.

2004-04-23  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (set_accept_focus) (get_group)
	Add descriptions of these methods.
	(gtk.gdk.window_lookup_for_display)
	(gtk.gdk.window_foreign_new_for_display)
	Add description for these functions.

	* pygtk-gdkatom.xml Fix constructor link.

	* pygtk-gdkdisplaymanager.xml Fix gdkdisplay link.

	* pygtk-gdkkeymap.xml Fix signal links.
	Fix keyval_get_keys link - change to lookup_key method.
	("keys-changed") Add description of this GTK+ 2.2 signal.
	(gtk.gdk.keyval_to_lower) Fix name.

	* pygtk-gdk-functions.xml
	(gtk.gdk.screen_width) (gtk.gdk.screen_height)
	(gtk.gdk.screen_width_mm) (gtk.gdk.screen_height_mm)
	Remove these descriptions - now with GdkWindow.
	Add links to all functions.

	* pygtk-gdkwindow.xml Fix links to gtk.Window.set_wmclass method.
	fix reference to gtk.gdk.window_constrain_size function

	* pygtk-gdkvisual.xml (visual_get_best_with_type)
	Add missing parameter.

	* pygtk-gdkpixbuf.xml (gtk.gdk.pixbuf_new_from_file_at_size)
	Fix parameter name.

	* pygtk-gdk-functions.xml Fix reference to gtk.gdk.atom_intern.
	Update the description. Reorder function listing.
