@@ -620,11 +620,14 @@ containing:</para>
 	  <simpara>label - a string to use for a label</simpara>
 	</listitem>
 	<listitem>
-	  <simpara>modifier - a set of modifiers</simpara>
+	  <simpara>modifier - a modifier mask (see the <link
+linkend="method-gdkevent--get-state"><methodname>get_state</methodname>()</link>
+method for more detail on modifers)</simpara>
 	</listitem>
 	<listitem>
 	  <simpara>keyval - an integer key value (see <link
-	  linkend="class-gdkkeymap"><classname>gtk.gdk.Keymap</classname></link>)</simpara>
+	  linkend="class-gdkkeymap"><classname>gtk.gdk.Keymap</classname></link>)
+	  Together with the modifiers specifies an accelerator.</simpara>
 	</listitem>
 	<listitem>
 	  <simpara>translation_domain - a string identifier of a translation
@@ -660,7 +663,9 @@ items, the old item gets replaced.</para>
       <para>The <function>gtk.stock_lookup</function>() function looks up
 the stock item identified by <parameter>stock_id</parameter> and returns a
 5-tuple containing its information. If <parameter>stock_id</parameter> is
-not known this function returns <literal>None</literal></para>
+not known this function returns <literal>None</literal>. See the <link
+linkend="function-gtk--stock-add"><function>gtk.stock_add</function>()</link>
+function for more detail.</para>
 
     </refsect2>
 
@@ -678,7 +683,7 @@ not known this function returns <literal>None</literal></para>
       </variablelist>
 
       <para>The <function>gtk.stock_list_ids</function>() function returns a
-list of all known stock IDs added to a <link
+list containing all of the known stock IDs added to a <link
 linkend="class-gtkiconfactory"><classname>gtk.IconFactory</classname></link>
 or registered with the <link
 linkend="function-gtk--stock-add"><function>gtk.stock_add</function>()</link>
