@@ -9,6 +9,9 @@
 
 	* pygtk-gdkscreen.xml ("size-changed") Add description.
 
+	* pygtk-gtk-stock-items.xml (gtk.stock_lookup)
+	(gtk.stock_list_ids) Add reference links.
+
 2004-04-24  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-pangoattribute.xml Fix typo. Reorder attributes.
